fixed alignment and put last block centered

--- a/css/customstyle.css
+++ b/css/customstyle.css
@@ -9,7 +9,7 @@ body{
 .bgcontainer {
     background-color: #3a3030;
     opacity: 0.95;
-    width: 100%;
+
 }
 
 
@@ -55,18 +55,6 @@ color: whitesmoke;
 
 
 
-#lootlist .row {
-    display: flex;
-    flex-wrap: wrap;
-    padding: 0 4px 0 50px;
-    margin: auto;
-}
-
-#lootlist {
-    background-color: #3a3030;
-    opacity: 0.95;
-}
-
 
 
 .row img {
@@ -95,23 +83,7 @@ color: whitesmoke;
 }
 
 
-#movierow {
 
-    width: 70%;
-    margin-left: 30px;
-}
-
-#snackrow {
-    margin-top: 30px;
-    width: 70%;
-    margin-left: 30px;
-}
-
-#hobbyrow {
-    margin-top: 30px;
-    width: 70%;
-    margin-left: 30px;
-}
 
 .carousel-inner img {
     margin: auto;
@@ -144,3 +116,4 @@ color: whitesmoke;
 a:visited {
     border: black 20px solid ;
 }
+
